cabal-version: 2.4

author: monadosquito
description: Generate classes in accordance with a scheme.
extra-source-files: CHANGELOG.md
license-file: LICENSE
license: MIT
maintainer: monadosquito@gmail.com
name: bem
synopsis: typed BEM
version: 1.0.0

library
    build-depends: base, mtl, split
    default-language: Haskell2010
    exposed-modules:
        Bem.Bem
        , Bem.Cls.Cls
        , Bem.Cls.Gen.Gen
        , Bem.Utl.Intr
        , Bem.Utl.Utl
        , Bem.Cfg.Cfg
        , Bem.Cls.Gen.Cfg
        , Bem.Cls.Gen.Intr
    ghc-options: -Wall
    hs-source-dirs: src
    other-extensions:
        DataKinds
        , GADTs
        , KindSignatures
        , RankNTypes
        , RecordWildCards
        , NamedFieldPuns
